src/tests/render_snapshots/snapshots/sabiql__render_snapshots__inspector__inspector_columns_narrow_pane_right_edge_truncates_cjk_comment.snap
---
source: src/tests/render_snapshots/inspector.rs
expression: output
---
test_project ▸ test_db ▸ -                                                     connected | localhost:5432/test
┌ [1] Explorer ────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                       
│> public.users            │┌ [2] Inspector ─────────────────────────────────────────────────────────────────┐
│  public.posts            ││Type      Null   PK   Default   Comment                                         │
│  public.comments         ││integer          ✓              ス テ ー タ ス （ PENDING:判 断 待 ち 、 APPROVED:承 認 ...  │
│                          ││varcha...                                                                       │
│                          ││varcha... ✓                                                                     │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││ col 100% ◀︎─══════════════════════════════════════════════════════════════════▶︎ │
│                          │└────────────────────────────────────────────────────────────────────────────────┘
│                          │┌ [3] Result ────────────────────────────────────────────────────────────────────┐
│                          ││(select a table to preview)                                                     │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
└──────────────────────────┘└────────────────────────────────────────────────────────────────────────────────┘
r:Reload  s:SQL  e:ER Diagram  ^P:Tables  ^O:History  ^R:Read-Only  f:Focus  Tab/⇧Tab:InsTabs  ?:Help  F1:Pale
